# DesktopPet

./: .env.example  .gitignore  AGENTS.md  AnimePersonDesktopPet.spec  README.md  build.bat  main.py  pyproject.toml  requirements.txt  run.bat  提示词.md
.github/workflows/: build-windows.yml
app/: __init__.py  animation_player.py  application.py  behavior_controller.py  character_manager.py  chat_client.py  chat_window.py  config_manager.py  constants.py  env_manager.py  logging_config.py  pet_window.py  platform_window.py  resource_manager.py  screen_manager.py  settings_window.py  startup_manager.py  state_machine.py  tray_manager.py
artwork/hatch_run/: imagegen-jobs.json  pet_request.json
artwork/hatch_run/final/: pet.json  validation-extended.json
artwork/hatch_run/frames/: frames-manifest.json
artwork/hatch_run/prompts/: base-pet.md  look-cardinals.md
artwork/hatch_run/qa/: cardinal-anchors.json  look-continuity.json  (+12 more)
config/: default_config.json
docs/: architecture.md  asset_pipeline.md  character_analysis.md  character_style_guide.md  packaging.md
reports/: asset_validation_report.md  final_report.md
scripts/: build_app_icons.py  build_character_preview.py  build_remaining_actions_contact_sheet.py  dev.py  generate_placeholder_assets.py  import_hatch_assets.py  import_remaining_actions.py  prepare_remaining_action_guides.py  validate_assets.py  verify_installation.py
tests/: test_animation_player.py  test_asset_transparency.py  test_character_manager.py  test_chat_client.py  test_config_manager.py  test_paths_and_bounds.py  test_state_machine.py
(+48 files in other folders)
