[project]
name = "anime-person-desktop-pet"
version = "1.0.0"
description = "A transparent animated desktop pet for Windows"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.7,<7", "Pillow>=10.3,<12", "python-dotenv>=1.0,<2"]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "PyInstaller>=6.8,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
